# c_cpp_cmake_templates

./: README.md  gen_template_c.py  gen_template_cpp.py  gen_template_cpp_test.py  gen_template_debug_CMakeLists.py  gen_template_h.py  gen_template_hpp.py  gen_template_integration_test_CMakeLists.py  gen_template_unit_test_CMakeLists.py
OpenCV_CMakeLists/: CMakeLists.txt
